# ai-drawio

./: .gitignore  AGENTS.md  README.md  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.mjs  tsconfig.json
app/: arco-config-provider.tsx  globals.css  layout.tsx
assets/: ai-drawio.icns
public/: splash.html
scripts/: ai-drawio-cli.ts  build-macos-cli-dmg.sh  build-macos-cli-pkg.sh  prepare-drawio.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/pkg/macos/scripts/: postinstall
src-tauri/resources/macos/: install-cli-to-path.sh
src-tauri/src/: cli_path_install.rs  cli_schema.rs  control_protocol.rs  control_server.rs  conversation_commands.rs  conversation_db.rs  document_bridge.rs  main.rs  packaged_cli.rs  session_runtime.rs  tray_settings.rs  webview_api.rs
tests/: ai-drawio-cli-source.test.ts  ai-drawio-cli.test.ts  app-startup-loading-front-source.test.ts  app-startup-loading-splash-source.test.ts  app-startup-loading-tauri-source.test.ts  arco-adoption.test.ts  button-icons-rounding.test.ts  canvas-history-label.test.ts  canvas-history-preview.test.ts  cli-install-status-source.test.ts  cli-window-focus-source.test.ts  control-transport-source.test.ts  conversation-home-pagination-source.test.ts  conversation-home-source.test.ts  conversation-model.test.ts  conversation-route-state.test.ts  conversation-store-api.test.ts  conversation-store-sqlite-source.test.ts  dev-mode-config.test.ts  dmg-cli-install-source.test.ts  drawio-execution-flow.md  internal-breadcrumb-source.test.ts  (+40 more)
(+143 files in other folders)
