[package]
name = "ai-drawio"
version = "0.1.0"
description = "Local Tauri shell for the bundled draw.io webapp"
authors = ["Codex"]
edition = "2021"

[build-dependencies]
clap = { version = "4", features = ["std"] }
clap_complete = "4"
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
clap = { version = "4", features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
tauri-plugin-cli = "2"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
