[package]
name = "ai-drawio"
version = "0.1.0"
description = "Local Tauri shell for the bundled draw.io webapp"
authors = ["Codex"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
clap = { version = "4", features = ["std"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = ["tray-icon"] }
time = { version = "0.3", features = ["formatting"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSImage"] }
objc2-foundation = { version = "0.3", features = ["NSData"] }

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
